--- a/app/src/main/res/layout/activity_outside_web.xml
+++ b/app/src/main/res/layout/activity_outside_web.xml
@@ -11,7 +11,49 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/app_bar" />
+        <!--<include layout="@layout/app_bar" />-->
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/mToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+
+            app:paddingEnd="4dp"
+            app:paddingStart="0dp"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+
+                <creationsofali.teknogia.appfonts.DroidSansTextView
+                    android:id="@+id/textToolbarTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Title Text"
+                    android:textColor="@color/color_white"
+                    android:textSize="16sp" />
+
+                <creationsofali.teknogia.appfonts.DroidSansTextView
+                    android:id="@+id/textToolbarSubtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:alpha="0.7"
+                    android:text="Subtitle Text"
+                    android:textColor="@color/color_white"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
 
         <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
             android:id="@+id/progressBar"
