Upgrade the project to API level 26

--- a/app/src/main/res/menu/menu_nav_drawer.xml
+++ b/app/src/main/res/menu/menu_nav_drawer.xml
@@ -43,7 +43,7 @@
             android:id="@+id/navContactUs"
             android:checkable="false"
             android:icon="@drawable/ic_perm_phone_msg"
-            android:title="Wasiliana Nasi" />
+            android:title="Kutana na Clique" />
 
         <item
             android:id="@+id/navAbout"
